# AVIS

./: .gitignore  COMMANDS.md  Cargo.toml  README.md  THESIS.md  install.ps1  uninstall.ps1
.claude/: CLAUDE.md  launch.json  settings.local.json
.github/workflows/: release.yml
src/: cli.rs  config.rs  crypto.rs  errors.rs  main.rs  output.rs  sanitize.rs  time.rs
src/auth/: mod.rs  pkce.rs  refresh.rs
src/commands/: download.rs  extract.rs  identity.rs  init.rs  mod.rs  read.rs  send.rs  wait.rs
