[package]
name = "avis"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "avis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
chacha20poly1305 = "0.10.1"
rand = "0.8"
base64 = "0.22.1"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls", "smtp-transport"] }
imap = "2.4.1"
native-tls = "0.2.18"
reqwest = { version = "0.13.2", features = ["json"] }
serde_urlencoded = "0.7.1"
urlencoding = "2.1"
open = "5.3.3"
tokio-stream = "0.1.18"
sha2 = "0.10.9"
